# app/serializers/api/user_serializer.rb
@@ -29,7 +29,6 @@ class Api::UserSerializer
     {
       timezone: user.timezone,
       maps: user.safe_settings.maps,
-      fog_of_war_meters: user.safe_settings.fog_of_war_meters.to_i,
       meters_between_routes: user.safe_settings.meters_between_routes.to_i,
       preferred_map_layer: user.safe_settings.preferred_map_layer,
       speed_colored_routes: user.safe_settings.speed_colored_routes,
@@ -43,7 +42,6 @@ class Api::UserSerializer
       photoprism_url: user.safe_settings.photoprism_url,
       visits_suggestions_enabled: user.safe_settings.visits_suggestions_enabled?,
       speed_color_scale: user.safe_settings.speed_color_scale,
-      fog_of_war_threshold: user.safe_settings.fog_of_war_threshold,
       globe_projection: user.safe_settings.globe_projection
     }
   end
